# Computational-Intelligence-2022

./: README.md  pyproject.toml
Lab1/: Es1.py  README.md
Lab2/: one-max.ipynb  one-max.ipynb:Zone.Identifier
lab1/: Es1.py  README.md
lab2/: README.md
lab3/: README.md  lab3_nim.ipynb  lab3_part2.ipynb  lab3_task3.4.ipynb
